Color Bug + Spacing Mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -102,6 +102,8 @@ ul {
   margin-bottom: 0px;
   color: $main-color;
   line-height: 80%;
+    margin-top: 20px;
+
 }
 
 
@@ -138,8 +140,9 @@ ul {
 
 .nouveau-mobile { 
 
-.project-title-mobile{ 
+.project-title-mobile , #subcat-mobile-index{ 
 color: $new-project;}
+
 
 
 }
