--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -105,6 +105,8 @@ a{ text-decoration: none;color: $new-project;
 
 &:hover{ color: $body-color; -webkit-text-stroke: 1px $new-project;     -webkit-font-smoothing: antialiased;}}
 
+.subcat {color: $new-project}
+
 }
 
 
